Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,6 @@ steps:
   displayName: 'Push Docker Image'
   inputs:
     command: push
-    containerRegistry: 'gambleats.azurecr.io'
+    containerRegistry: 'gambleatscr'
     repository: 'user_service'
     tags: 'latest'
