Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ variables:
 
 steps:
 - script: |
+    composer require --ignore-platform-req=ext-mongodb
     composer install --no-interaction --prefer-dist --optimize-autoloader
   displayName: 'Install Dependencies'
 
