--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,14 +20,20 @@ steps:
 #     composer run-script tests
 #   displayName: 'Run Tests'
 
-- script: |
-    docker build -t gambleats_user_service:latest .
-  displayName: 'Build Docker Image'
+# - task: DockerCompose@0
+#   inputs:
+#     containerregistrytype: 'Azure Container Registry'
+#     azureSubscription: 'gambleatsrm'
+#     azureContainerRegistry: '{"loginServer":"gambleats.azurecr.io", "id" : "/subscriptions/c78e83f2-1316-4da7-9320-4db2dc98cfb1/resourceGroups/GamblEats/providers/Microsoft.ContainerRegistry/registries/gambleats"}'
+#     dockerComposeFile: '**'
 
 - task: Docker@2
-  displayName: 'Push Docker Image'
   inputs:
-    command: push
     containerRegistry: 'gambleatscr'
-    repository: 'user_service'
-    tags: 'latest'
+    repository: 'userService_containerRepo'
+    command: 'buildAndPush'
+    Dockerfile: '**/docker-compose.yml'
+    tags: |
+      $(Build.BuildId)
+      latest'
+  displayName: 'Run a Docker Compose command'
