--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,18 +31,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: Docker@2
-      displayName: Build and push an image to container registry
+    - task: DockerCompose@0
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
-        dockerfile: $(dockerfilePath)
-        containerRegistry: $(dockerRegistryServiceConnection)
-        tags: |
-          $(tag)
-
-    - upload: manifests
-      artifact: manifests
+        containerregistrytype: 'Azure Container Registry'
+        azureSubscription: 'gambleatsrm'
+        azureContainerRegistry: '{"loginServer":"gambleats.azurecr.io", "id" : "/subscriptions/c78e83f2-1316-4da7-9320-4db2dc98cfb1/resourceGroups/GamblEats/providers/Microsoft.ContainerRegistry/registries/gambleats"}'
+        dockerComposeFile: '**/docker-compose.yml'
+        action: 'Run a Docker Compose command'
 
 - stage: Deploy
   displayName: Deploy stage
