Add order Add services property Controller + Import HttpClientSerrvice

--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ MONGODB_DB=db_test
 ###< doctrine/mongodb-odm-bundle ###
 
 CORS_ALLOW_ORIGIN=^.*$
+
+URL_RESTAURANT_API='http://127.0.0.1:8001/restaurant/'
