--- a/.env
+++ b/.env
@@ -35,4 +35,4 @@ MONGODB_DB=db_test
 
 CORS_ALLOW_ORIGIN=^.*$
 
-URL_RESTAURANT_API='http://127.0.0.1:8001/'
+URL_RESTAURANT_API='https://gambleatsrestaurantservice.azurewebsites.net/'
